[package]
name = "swedule"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
clap = "3.0.0-beta.2"
generational-arena = "0.2.8"
hilbert = "0.1.1"
itertools = "0.10.1"
ordered-float = "2.7.0"
regex = "1.5.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "ics_16_1"
harness = false